# knowledge-base

./: .gitignore  README.md  pyproject.toml
.github/scripts/: .github-secrets.env.example  setup-cron.sh  sync-secrets.sh
.github/workflows/: deploy.yml  sync-secrets.yml
app/api/: main.py
app/api/routes/: ask.py  characters.py  curriculum.py  import_data.py  learners.py
app/core/: config.py  database.py
app/models/: models.py
data/: knowledge.db  knowledge.db.prod-backup
gateway/: datasette-pm2.config.js  nginx.conf  pm2.config.js
