[project]
name = "knowledge-base"
version = "0.1.0"
description = "Curriculum knowledge base API — Chinese characters, phrases, and lesson tracking"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.40.0",
    "sqlmodel>=0.0.33",
    "aiosqlite>=0.22.1",
    "pydantic>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.28",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
